# milgram-pi

./: README.md  pyproject.toml
.github/: README.md  claude_desktop_config.json
src/: proxy.py  relay.py  remote.py  server.py
