[project.scripts]
fly-train = "train:main"
fly-benchmark = "benchmark:main"

[build-system]
requires = ["hatchling>=1.11.0"]
build-backend = "hatchling.build"

[project]
requires-python = ">=3.10"
version = "0.0.1"

name        = "four-leaf-yolo"
description = "Run Stanley Milgram's famous experiment with a Raspberry Pi and MCP."
readme      = ".github/README.md"
license     = "MIT"

dependencies = [
]


[tool.hatch.build]
ignore-vcs = false
reproducible = true
directory = "dist"
sources = ["src"]
include = ["src/", "LICENSE", "pyproject.toml", ".github/README.md"]
