[project.scripts]
milgram-pi = ""

[build-system]
requires = ["hatchling>=1.11.0"]
build-backend = "hatchling.build"

[project]
requires-python = ">=3.10"
version = "0.0.1"

name        = "milgram-pi"
description = "Run Stanley Milgram's famous experiment with a Raspberry Pi and MCP."
readme      = ".github/README.md"
license     = "MIT"

dependencies = [
    "black",
    "isort",
    "mcp[cli]",
]


[tool.hatch.build]
ignore-vcs = false
reproducible = true
directory = "dist"
sources = ["src"]
include = ["src/", "LICENSE", "pyproject.toml", ".github/README.md"]
